# tda-frontend

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  test-langsmith.ts  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
BackupOfDocsToTest/: ADDITIONAL_CONTEXT_NEEDED.md  COMPLETE_DOCUMENTATION_TOOLKIT.md  DEEPAGENTS_COMPLETE_GUIDE.md  IMPLEMENTATION_PLAN.md  PLANNING_CENTER_PORTABILITY_GUIDE.md  PRODUCTION_READINESS.md  SKILLS_DOCUMENTATION_FRAMEWORK.md  tda-info.md
app/: layout.tsx  page.tsx
app/api/agents/talent-demand/: route.ts
app/api/agents/talent-demand/runs/: route.ts
app/api/agents/talent-demand/state/: route.ts
backend/: Dockerfile  pyproject.toml  railway.toml
docs/: AGENT_HANDOFF.md  DEVELOPMENT.md  GLOSSARY.md  PRE_DEVELOPMENT_DOCUMENTATION_FRAMEWORK.md  PROJECT-STATUS.md  TALENT_DEMAND_ANALYST_SPECIFICATION.md  data-architecture.md
docs/00-project-management/: PROJECT-COMMAND-CENTER.md  tda-COMMAND-CENTER-ELITE.md  tda-COMMAND-CENTER.md
docs/api/: openapi.yaml
docs/architecture/c4/: 01-context.md  02-containers.md  03-components.md
docs/architecture/data/: 2025-01-21-talent-demand-analyst-data-model.md
docs/architecture/decisions/: ADR-001-multi-agent-architecture.md  ADR-002-agent-framework-selection.md  ADR-003-streaming-response-architecture.md
docs/design/: 2025-01-21-talent-demand-analyst-design.md  error-handling-specification.md  sequence-diagrams.md  token-cost-budget.md
docs/observability/: monitoring-setup.md
docs/planning/: layer-8-recommendation.md
docs/plans/: 2025-01-21-talent-demand-analyst-implementation-plan.md
docs/prompts/: README.md  coordinator.md  job-analyzer.md  report-synthesizer.md  skill-researcher.md
docs/qa/: 2025-01-21-talent-demand-analyst-qa-plan.md  integration-test-scenarios.md  performance-baseline.md
docs/requirements/: 2025-01-21-talent-demand-analyst-prd.md  2025-01-21-talent-demand-analyst-trd.md
docs/runbooks/deployment/: deploy-backend.md  deploy-frontend.md
docs/runbooks/incident-response/: external-api-failure.md  high-error-rate.md
docs/runbooks/maintenance/: rotate-api-keys.md
docs/security/: threat-model.md
lib/: talent-demand-agent.ts
