[project]
name = "tda-backend"
version = "0.1.0"
description = "Talent Demand Analyst - AI-powered job market analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TDA Team"}
]
keywords = ["ai", "talent", "job-market", "agents", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ===========================================
# Core Dependencies (pinned for reproducibility)
# ===========================================
dependencies = [
    # Web framework
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",

    # Data validation
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",

    # HTTP client
    "httpx==0.26.0",

    # AI/LLM
    "anthropic==0.18.1",

    # Search APIs
    "tavily-python==0.3.3",
    "exa-py==1.0.9",

    # HTML parsing (for URL reader)
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",

    # Environment
    "python-dotenv==1.0.1",

    # Observability
    "langsmith==0.0.87",

    # Utilities
    "tenacity==8.2.3",  # Retry logic
]

# ===========================================
# Development Dependencies
# ===========================================
[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.0.0",
    "pytest-asyncio==0.23.4",
    "pytest-cov==4.1.0",
    "pytest-timeout==2.2.0",
    "httpx==0.26.0",  # For TestClient

    # Mocking
    "pytest-mock==3.12.0",
    "respx==0.20.2",  # httpx mocking

    # Linting & formatting
    "ruff==0.2.1",
    "mypy==1.8.0",

    # Type stubs
    "types-beautifulsoup4==4.12.0.20240106",

    # Security scanning
    "bandit==1.7.7",
    "safety==3.0.1",

    # Contract testing
    "schemathesis==3.25.5",
    "openapi-spec-validator==0.7.1",

    # Performance testing
    "locust==2.23.1",
]

# ===========================================
# Build System
# ===========================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ===========================================
# Ruff Configuration
# ===========================================
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert (allowed in tests)
]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # Allow asserts and hardcoded passwords in tests

[tool.ruff.isort]
known-first-party = ["app"]

# ===========================================
# Mypy Configuration
# ===========================================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ===========================================
# Pytest Configuration
# ===========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 60

# ===========================================
# Coverage Configuration
# ===========================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = ["tests/*", "app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80
